[metadata]
name = n10ioana
version = 0.1.0
author = Glenn K. Lockwood
author_email = glock@lbl.gov
description = Analysis tools for NERSC-10 I/O investigations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glennklockwood/n10ioana
project_urls =
    Bug Tracker = https://github.com/glennklockwood/n10ioana/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    numpy
    pandas

[options.packages.find]
where = src
